--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,12 @@
   border-radius: 12px;
   border: 1px solid rgba(209, 213, 219, 0.3);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
