added lambda function urls

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,3 +22,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+::selection {
+  background-color: #00FF7E;
+  color: black;
+}
